<resources>
    <string name="app_name">Virgilio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_info">Information</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_in_our_system">Login in our system</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="facebook_application_id" translatable="false">244497109904556</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb244497109904556</string>
    <string name="labEmail">Email:</string>
    <string name="labName">"Name: "</string>
    <string name="labSurname">"Surname: "</string>
    <string name="labDepartment">"Department: "</string>
    <string name="labPassword">"Password: "</string>
    <string name="Save">Save</string>
    <string name="labUniName">Select your University</string>
    <string name="imagebooksprofile">imageBooksProfile</string>
    <string name="insert_your_department">Insert your Department</string>
    <string name="insert_a_new_review">Insert a new review</string>
    <string name="no_review_inListView">You have no reviews, insert a new one!</string>
    <string name="Exam">Exam: </string>
    <string name="Professor">"Professor: "</string>
    <string name="Mark">"Mark: "</string>
    <string name="Niceness">"Niceness: "</string>
    <string name="Comment">"Comment: "</string>
    <string name="insert_the_exam">Insert the exam</string>
    <string name="insert_the_professor">Insert the Professor</string>
    <string name="insert_the_mark">Insert the mark from 18 to 31 (lode)</string>
    <string name="Insert_the_niceness">Insert the niceness from 1 to 5 (max)</string>
    <string name="insert_your_comments">Insert your comments</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="no_profile_section_set">Before continuing, you must fill the University and department fields in your Profile section!</string>
    <string name="no_review_has_been_found">No reviews has been found for your department!</string>
    <string name="average">Average:</string>
    <string name="information">Information:</string>
    <string name="creators">Creators:</string>
    <string name="version">Version:</string>
    <string name="search">search</string>
</resources>
