<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.macc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.macc.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_reviews"
        android:name="com.example.macc.ui.reviews.ReviewsFragment"
        android:label="@string/menu_reviews"
        tools:layout="@layout/fragment_reviews" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.macc.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.macc.ui.information.InformationFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_information" />

</navigation>