<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F8F8"
    android:id="@+id/fragment_profile">

    <ImageView
        android:id="@+id/profile_imageBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_books_profile"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imagebooksprofile" />

    <ImageButton
        android:id="@+id/profile_imageUni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@null"
        app:srcCompat="@mipmap/ic_university" />

    <TextView
        android:id="@+id/profile_labUniName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_imageUni"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/amita"
        android:text="@string/labUniName"
        android:textColor="#FAF9F9" />

    <TextView
        android:id="@+id/profile_labName"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_imageBackground"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/labName"
        android:fontFamily="@font/amita"
        android:textColor="#000" />

    <TextView
        android:id="@+id/profile_TextViewName"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_imageBackground"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/profile_labName"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/profile_labSurname"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_labName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/labSurname"
        android:fontFamily="@font/amita"
        android:textColor="#000" />

    <TextView
        android:id="@+id/profile_TextViewSurname"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_TextViewName"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/profile_labSurname"
        android:textColor="#000"
        android:gravity="center"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/profile_labEmail"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_labSurname"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/labEmail"
        android:fontFamily="@font/amita"
        android:textColor="#000" />


    <TextView
        android:id="@+id/profile_TextViewEmail"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_TextViewSurname"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/profile_labEmail"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/profile_labDepartment"
        android:layout_width="95dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_labEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/labDepartment"
        android:fontFamily="@font/amita"
        android:textColor="#000" />

    <EditText
        android:id="@+id/profile_edDepartment"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profile_labEmail"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/profile_labDepartment"
        android:background="#C1BABA"
        android:gravity="center"
        android:textColor="#000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/profile_btnSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_edDepartment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_bg"
        android:backgroundTint="#FF9800"
        android:text="@string/Save"
        android:textAlignment="center"
        android:textColor="#000" />

</RelativeLayout>