<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageView_painting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@mipmap/ic_painting"/>

        <TextView
            android:id="@+id/text_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_painting"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/information"
            android:fontFamily="@font/amita"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/text_information_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_information"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/amita"
            android:textSize="15sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/text_information_creators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_information_desc"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/creators"
            android:fontFamily="@font/amita"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/text_information_creators_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_information_creators"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/amita"
            android:textSize="15sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/text_information_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_information_creators_desc"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/version"
            android:fontFamily="@font/amita"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/text_information_version_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_information_version"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/amita"
            android:textSize="15sp"
            android:textColor="#000"/>
    </RelativeLayout>
</ScrollView>